add html and css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="js/scripts.js"></script>
     <title>Coin Combinations</title>
@@ -12,21 +12,21 @@
   <div class="middle">
     <h1>Coin Combinations</h1>
 
-    <!-- <form id="titlecase">
+    <form id="coinAmounts">
       <div  class="form-group" id="fancy-inputs">
         <label class="input">
-          <input id="phrase" type="text">
-          <span><span>Enter Word</span></span>
+          <input id="amount" type="text">
+          <span><span>Enter The Amount of Money You Have:</span></span>
         </label>
       </div>
     </form>
-    <button type="submit" class="btn">Anagrams!</button>
+    <button type="submit" class="btn">We Want Change!</button>
     <div id="result">
       <h5>
-        Your anagrams are: "<span class="phrase"></span>"
+        The coins you have are: "<span class="change"></span>"
       </h5>
     </div>
-  </div> -->
+  </div>
 
 
   </body>
