take out quotes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <button type="submit" class="btn">We Want Change!</button>
     <div id="result">
       <h5>
-        The coins you have are: "<span class="change"></span>"
+        The coins you have are: <span class="change"></span>
       </h5>
     </div>
   </div>
